<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="welcome">Welcome</string>
    <string name="instruction">Instructions: select rock, paper or scissors to play.</string>
    <string name="statistics">Your all time statistics</string>
    <string name="win">Win:</string>
    <string name="draw">Draw:</string>
    <string name="lose">Lose:</string>
    <string name="win_score">0</string>
    <string name="draw_score">0</string>
    <string name="lose_score">0</string>
    <string name="computer">Computer</string>
    <string name="player">You</string>
    <string name="you_win">You win!</string>
    <string name="computer_wins">Computer wins!</string>
    <string name="you_draw">Draw</string>
</resources>