<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="156dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="71dp"
        android:text="@string/instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="137dp"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBorderline" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="47dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics">

        <TextView
            android:id="@+id/tvWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/win"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvWinScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/win_score" />

        <TextView
            android:id="@+id/tvDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/draw"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvDrawScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/draw_score" />

        <TextView
            android:id="@+id/tvLose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lose"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvLoseScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lose_score" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivRock"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/rock"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivPaper"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivPaper"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/paper"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivScissor" />

    <ImageView
        android:id="@+id/ivScissor"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/scissors"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivPlayerPick"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="53dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/ivBorderline"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <ImageView
        android:id="@+id/ivComputerPick"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvComputerLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="10dp"
        android:text="@string/computer"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivComputerPick" />

    <TextView
        android:id="@+id/tvPlayerLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="53dp"
        android:text="@string/player"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerPick" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="177dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/vs"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayerPick"
        app:layout_constraintStart_toEndOf="@+id/ivComputerPick"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>